updated json file

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://anasfaaiz.github.io/PGatEase",
+  "homepage": "https://AnasFaaiz.github.io/PGatEase/",
   "name": "pgatease-frontend",
   "private": true,
   "version": "0.1.0",
