--- a/client/package.json
+++ b/client/package.json
@@ -26,11 +26,17 @@
     "@radix-ui/react-toast": "^1.2.10",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@supabase/supabase-js": "^2.49.4",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "framer-motion": "^12.7.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.501.0",
+    "mysql2": "^3.14.1",
     "next": "14.1.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
